[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/ArcadeFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menus/OptionsMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="OptionsMenu" type="Popup"]
visible = true
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.270588, 0.0196078, 0.4, 1 )

[node name="Options" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="OptionsGrid" type="GridContainer" parent="Options"]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 575.0
custom_constants/vseparation = 20
columns = 2

[node name="Fullscreen" type="Label" parent="Options/OptionsGrid"]
margin_right = 160.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"
uppercase = true

[node name="FCButton" type="CheckButton" parent="Options/OptionsGrid"]
margin_left = 898.0
margin_right = 974.0
margin_bottom = 40.0
size_flags_horizontal = 10

[node name="Master" type="Label" parent="Options/OptionsGrid"]
margin_top = 60.0
margin_right = 96.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( -322, -156 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
text = "Master"
uppercase = true

[node name="MasterSlider" type="HSlider" parent="Options/OptionsGrid"]
margin_left = 574.0
margin_top = 60.0
margin_right = 974.0
margin_bottom = 76.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
step = 5.0
value = -10.0
scrollable = false

[node name="Sfx" type="Label" parent="Options/OptionsGrid"]
margin_top = 96.0
margin_right = 208.0
margin_bottom = 112.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
text = "Sound effects"
uppercase = true

[node name="SfxSlider" type="HSlider" parent="Options/OptionsGrid"]
margin_left = 574.0
margin_top = 96.0
margin_right = 974.0
margin_bottom = 112.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
step = 5.0
value = -10.0
scrollable = false

[node name="Music" type="Label" parent="Options/OptionsGrid"]
margin_top = 132.0
margin_right = 208.0
margin_bottom = 182.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 4 )
text = "Music"
uppercase = true
percent_visible = -0.2

[node name="MusicSlider" type="HSlider" parent="Options/OptionsGrid"]
margin_left = 574.0
margin_top = 132.0
margin_right = 974.0
margin_bottom = 148.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
step = 5.0
value = -10.0
scrollable = false

[node name="Label" type="Label" parent="Options/OptionsGrid"]
margin_top = 202.0
margin_right = 208.0
margin_bottom = 216.0

[connection signal="toggled" from="Options/OptionsGrid/FCButton" to="." method="_on_FCButton_toggled"]
[connection signal="value_changed" from="Options/OptionsGrid/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Options/OptionsGrid/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="changed" from="Options/OptionsGrid/MusicSlider" to="." method="_on_MusicSlider_changed"]
[connection signal="value_changed" from="Options/OptionsGrid/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
